--- a/Runner.ipynb
+++ b/Runner.ipynb
@@ -2,19 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n"
+    "# import os\n",
+    "# from google.colab import drive\n",
+    "# drive.mount('/content/drive')\n",
+    "# project_dir = os.path.join('drive','My Drive','Personal Projects','Sleep Apnea Study','apnea-study')\n",
+    "# os.chdir(project_dir)\n",
+    "# !git pull\n",
+    "# !pip install -r colab_requirements.txt \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
+    "%load_ext autoreload\n",
+    "\n",
     "import datetime\n",
     "\n",
     "import tensorflow as tf\n",
@@ -34,11 +58,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "homepap-lab-full-1600042 does not track pulse, skipping\n",
+      "homepap-lab-full-1600043 has sample rate of 64, skipping\n",
+      "homepap-lab-full-1600021 has sample rate of 64, skipping\n",
+      "homepap-lab-full-1600024 has sample rate of 200, skipping\n",
+      "homepap-lab-full-1600031 has sample rate of 2, skipping\n",
+      "homepap-lab-full-1600027 has sample rate of 2, skipping\n",
+      "homepap-lab-full-1600033 has sample rate of 64, skipping\n",
+      "homepap-lab-full-1600003 has sample rate of 200, skipping\n",
+      "homepap-lab-full-1600017 has sample rate of 64, skipping\n",
+      "homepap-lab-full-1600028 does not track pulse, skipping\n",
+      "homepap-lab-full-1600011 has sample rate of 200, skipping\n",
+      "homepap-lab-full-1600004 does not track pulse, skipping\n",
+      "homepap-lab-full-1600013 has sample rate of 64, skipping\n"
+     ]
+    }
+   ],
    "source": [
-    "#create_tfrecords_from_raw_data(raw_data_dir='data/raw_data',tf_rec_data_dir='data/processed_data')"
+    "utils.create_tfrecords_from_raw_data(raw_data_dir='data/raw_data',tf_rec_data_dir='data/processed_data')"
    ]
   },
   {
@@ -50,23 +94,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "current_time = datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
-    "session_name = 'lstm_5_1_small_batch_weights_test' +  '_' + current_time\n",
+    "session_name = 'new_data_test' +  '_' + current_time\n",
     "optimizer_params = {'learning_rate':0.0001}\n",
-    "training_params = {'num_epochs':100, 'batch_size':64,'apnea_weight':5}\n",
-    "preprocess_params = {'featurize_func' : utils.featurize_2,'seq_len':30,'pulse_sample_rate':16,'data_stride':15}\n",
+    "training_params = {'num_epochs':100, 'batch_size':512,'apnea_weight':5}\n",
+    "preprocess_params = {'featurize_func' : utils.featurize_2,'seq_len':60,'pulse_sample_rate':16,'data_stride':30}\n",
     "preprocess_func = utils.preprocess_data\n",
     "model_params = {'rnn_hidden_dim':20}\n",
     "test_split = .15\n",
     "val_split = 0.1765\n",
-    "\n",
-    "model = BaseLSTM(rnn_hidden_dim=model_params['rnn_hidden_dim'])\n",
-    "loss_object = tf.keras.losses.BinaryCrossentropy()\n",
-    "optimizer = tf.keras.optimizers.Adam(optimizer_params['learning_rate'])\n",
+    "if tf.test.is_gpu_available():\n",
+    "    print('Using GPU')\n",
+    "    with tf.device(\"gpu:0\"):\n",
+    "        model = BaseLSTM(rnn_hidden_dim=model_params['rnn_hidden_dim'])\n",
+    "        loss_object = tf.keras.losses.BinaryCrossentropy()\n",
+    "        optimizer = tf.keras.optimizers.Adam(optimizer_params['learning_rate'])\n",
+    "else:\n",
+    "    model = BaseLSTM(rnn_hidden_dim=model_params['rnn_hidden_dim'])\n",
+    "    loss_object = tf.keras.losses.BinaryCrossentropy()\n",
+    "    optimizer = tf.keras.optimizers.Adam(optimizer_params['learning_rate'])\n",
     "log_dir = 'logs/gradient_tape/' + session_name\n",
     "model_weights_dir = 'model_weights/' + session_name"
    ]
@@ -80,29 +130,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Logging before flag parsing goes to stderr.\n",
-      "W0831 11:02:46.983357 4416091584 deprecation.py:323] From /anaconda3/envs/apnea/lib/python3.6/site-packages/tensorflow_core/python/data/util/random_seed.py:58: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n"
-     ]
-    },
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# %load_ext tensorboard\n",
+    "# print(tf.test.is_gpu_available())\n",
+    "# %tensorboard --logdir logs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "57911\n",
-      "0.090015136\n",
-      "6365\n",
-      "0.094920136\n",
-      "6571\n",
-      "0.0513519\n"
+      "30571\n",
+      "0.06763545\n",
+      "2887\n",
+      "0.1353077\n",
+      "3120\n",
+      "0.07686432\n"
      ]
     }
    ],
@@ -149,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -158,7 +220,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting Training\n"
+      "Starting Training\n",
+      "{'accuracy': 0.889909282217352, 'recall': 0.3523992229628973, 'precision': 0.2644635598141696, 'f1': 0.3021636434636265, 'auc': 0.7475163534829683}\n",
+      "{'accuracy': 0.87875, 'recall': 0.3577732990478838, 'precision': 0.27669981187852727, 'f1': 0.31205673758865254, 'auc': 0.7434877843595238}\n"
      ]
     }
    ],
@@ -193,20 +257,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'accuracy': 0.8405341712490181,\n",
-       " 'recall': 0.4867310344827586,\n",
-       " 'precision': 0.2943708498782075,\n",
-       " 'f1': 0.36686488959121727,\n",
-       " 'auc': 0.7892316308803503}"
+       "{'accuracy': 0.8315437016510796,\n",
+       " 'recall': 0.47529652700742386,\n",
+       " 'precision': 0.39754478623938333,\n",
+       " 'f1': 0.43295763699961143,\n",
+       " 'auc': 0.8160623692632343}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
