--- a/Development.ipynb
+++ b/Development.ipynb
@@ -2,9 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/envs/apnea/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:516: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
+      "/anaconda3/envs/apnea/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:517: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
+      "/anaconda3/envs/apnea/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:518: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
+      "/anaconda3/envs/apnea/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:519: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
+      "/anaconda3/envs/apnea/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:520: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
+      "/anaconda3/envs/apnea/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:525: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n",
+      "/anaconda3/envs/apnea/lib/python3.6/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:541: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
+      "/anaconda3/envs/apnea/lib/python3.6/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:542: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
+      "/anaconda3/envs/apnea/lib/python3.6/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:543: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
+      "/anaconda3/envs/apnea/lib/python3.6/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:544: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
+      "/anaconda3/envs/apnea/lib/python3.6/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:545: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
+      "/anaconda3/envs/apnea/lib/python3.6/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:550: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n"
+     ]
+    }
+   ],
    "source": [
     "import pyedflib\n",
     "import numpy as np\n",
@@ -22,32 +53,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "#extract raw data\n",
     "record_names = filter(lambda x : x != '', [re.sub(r\"\\..*$\",'',file) for file in os.listdir('data/raw_data/edfs/')])\n",
     "record_names = list(record_names)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "edf_data._close()\n",
-    "del edf_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "homepap-lab-full-1600001-nsrr.xml"
    ]
   },
   {
@@ -59,64 +71,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "homepap-lab-full-1600042 does not track pulse, skipping\n",
-      "homepap-lab-full-1600043 has sample rate of 64, skipping\n",
-      "homepap-lab-full-1600021 has sample rate of 64, skipping\n",
-      "homepap-lab-full-1600024 has sample rate of 200, skipping\n",
-      "homepap-lab-full-1600031 has sample rate of 2, skipping\n",
-      "homepap-lab-full-1600027 has sample rate of 2, skipping\n",
-      "homepap-lab-full-1600033 has sample rate of 64, skipping\n",
-      "homepap-lab-full-1600003 has sample rate of 200, skipping\n",
-      "homepap-lab-full-1600017 has sample rate of 64, skipping\n",
-      "homepap-lab-full-1600028 does not track pulse, skipping\n",
-      "homepap-lab-full-1600011 has sample rate of 200, skipping\n",
-      "homepap-lab-full-1600004 does not track pulse, skipping\n",
-      "homepap-lab-full-1600013 has sample rate of 64, skipping\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from lib.utils import get_record_names\n",
-    "raw_data_dir='data/raw_data'\n",
-    "edf_dir = os.path.join(raw_data_dir,'edfs')\n",
-    "annotation_dir = os.path.join(raw_data_dir,'annotations-events-nsrr/')\n",
-    "annotation_event_index = 2\n",
-    "record_names = get_record_names(edf_dir)\n",
+    "\n",
+    "\n",
+    "\n",
     "for record in record_names:\n",
-    "    edf_file_path = os.path.join(edf_dir,record+'.edf')\n",
-    "    #extract pulse data from edf file\n",
-    "    edf_data = pyedflib.EdfReader(edf_file_path)\n",
-    "    try:\n",
-    "        pulse_signal_number = edf_data.getSignalLabels().index('Pulse')\n",
-    "    except ValueError:\n",
-    "        print(\"{} does not track pulse, skipping\".format(record))\n",
-    "        continue\n",
-    "    pulse_sample_rate = edf_data.getSampleFrequencies()[pulse_signal_number]\n",
-    "    if pulse_sample_rate != 16:\n",
-    "        print(\"{} has sample rate of {}, skipping\".format(record,pulse_sample_rate))\n",
-    "        continue\n",
-    "    num_pulse_data_points = edf_data.readSignal(pulse_signal_number).shape[0]\n",
-    "    num_seconds = int(num_pulse_data_points / pulse_sample_rate)\n",
-    "    pulse = edf_data.readSignal(pulse_signal_number)\n",
-    "#     extract annotation data from edf file\n",
-    "    annotation = np.zeros(num_seconds)\n",
-    "    annotation_file_path = os.path.join(annotation_dir,record+'-nsrr.xml')\n",
-    "    annotation_data = ET.parse(annotation_file_path)\n",
-    "    annotation_data_root = annotation_data.getroot()\n",
-    "    scored_events = annotation_data_root[annotation_event_index]\n",
-    "    if scored_events.tag != 'ScoredEvents':\n",
-    "        print(\"{} has xml in wrong format, skipping\".format(record))\n",
-    "        continue\n",
-    "    #store apnea annotations in array that is num_seconds long,\n",
-    "    #each element of array is 1 if apnea was detected during that second\n",
-    "    #of sleep, 0 otherwise\n",
+    "    t = time.time()\n",
+    "    f = pyedflib.EdfReader('data/raw_data/edfs/'+record+'.edf')\n",
+    "    n = int(f.readSignal(26).shape[0] / 16)\n",
+    "    pulse = f.readSignal(26)\n",
+    "    annotation = np.zeros(n)\n",
+    "    tree = ET.parse('data/raw_data/annotations-events-nsrr/'+record+'-nsrr.xml')\n",
+    "    root = tree.getroot()\n",
+    "    scored_events = root[2]\n",
     "    for event in scored_events:\n",
     "        if event[1].text is not None:\n",
     "            if 'Obstructive apnea|Obstructive Apnea' == event[1].text:\n",
@@ -124,31 +94,33 @@
     "                duration = int(float(event[3].text))\n",
     "                end = start + duration + 1\n",
     "                annotation[start:end] = 1\n",
-    "    edf_data._close()\n",
-    "    del edf_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#https://sleepdata.org/datasets/homepap/files/polysomnography/edfs/lab/full\n",
-    "#non conforming files \n",
-    "# homepap-lab-full-1600042 does not track pulse, skipping\n",
-    "# homepap-lab-full-1600043 has sample rate of 64, skipping\n",
-    "# homepap-lab-full-1600021 has sample rate of 64, skipping\n",
-    "# homepap-lab-full-1600024 has sample rate of 200, skipping\n",
-    "# homepap-lab-full-1600031 has sample rate of 2, skipping\n",
-    "# homepap-lab-full-1600027 has sample rate of 2, skipping\n",
-    "# homepap-lab-full-1600033 has sample rate of 64, skipping\n",
-    "# homepap-lab-full-1600003 has sample rate of 200, skipping\n",
-    "# homepap-lab-full-1600017 has sample rate of 64, skipping\n",
-    "# homepap-lab-full-1600028 does not track pulse, skipping\n",
-    "# homepap-lab-full-1600011 has sample rate of 200, skipping\n",
-    "# homepap-lab-full-1600004 does not track pulse, skipping\n",
-    "# homepap-lab-full-1600013 has sample rate of 64, skipping"
+    "\n",
+    "                \n",
+    "    features_dict = {\n",
+    "        'x':tf.train.Feature(float_list=tf.train.FloatList(value=pulse)),\n",
+    "        'y':tf.train.Feature(float_list=tf.train.FloatList(value=annotation))\n",
+    "    }\n",
+    "    features = tf.train.Features(feature=features_dict)\n",
+    "    example = tf.train.Example(features=features)\n",
+    "\n",
+    "    filename = os.path.join('data','processed_data',record + '.tfrecord')\n",
+    "    with tf.io.TFRecordWriter(filename) as writer:\n",
+    "        writer.write(example.SerializeToString())\n",
+    "    \n",
+    "    \n",
+    "    f._close()\n",
+    "    del f\n",
+    "    print(time.time() - t)\n",
+    "\n",
+    "\n",
+    "plt.plot((pulse - pulse.mean()) / pulse.std())\n",
+    "plt.plot(np.repeat(annotation,16))\n",
+    "\n",
+    "\n",
+    "\n",
+    "#load in TF\n",
+    "\n",
+    "#create dataset"
    ]
   },
   {
