making shell script

--- a/Runner.ipynb
+++ b/Runner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,25 +17,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "\n",
@@ -58,26 +49,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "homepap-lab-full-1600042 does not track pulse, skipping\n",
-      "homepap-lab-full-1600043 has sample rate of 64, skipping\n",
-      "homepap-lab-full-1600021 has sample rate of 64, skipping\n",
-      "homepap-lab-full-1600024 has sample rate of 200, skipping\n",
-      "homepap-lab-full-1600031 has sample rate of 2, skipping\n",
-      "homepap-lab-full-1600027 has sample rate of 2, skipping\n",
-      "homepap-lab-full-1600033 has sample rate of 64, skipping\n",
-      "homepap-lab-full-1600003 has sample rate of 200, skipping\n",
-      "homepap-lab-full-1600017 has sample rate of 64, skipping\n",
-      "homepap-lab-full-1600028 does not track pulse, skipping\n",
-      "homepap-lab-full-1600011 has sample rate of 200, skipping\n",
-      "homepap-lab-full-1600004 does not track pulse, skipping\n",
-      "homepap-lab-full-1600013 has sample rate of 64, skipping\n"
+      "homepap-lab-full-1600187 has sample rate of 64, skipping\n",
+      "homepap-lab-full-1600192 has sample rate of 200, skipping\n",
+      "homepap-lab-full-1600186 has sample rate of 200, skipping\n",
+      "homepap-lab-full-1600191 does not track pulse, skipping\n",
+      "homepap-lab-full-1600188 has sample rate of 200, skipping\n",
+      "homepap-lab-full-1600189 has sample rate of 200, skipping\n"
      ]
     }
    ],
@@ -94,15 +78,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "current_time = datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
-    "session_name = 'new_data_test' +  '_' + current_time\n",
+    "session_name = 'more_data_test' +  '_' + current_time\n",
     "optimizer_params = {'learning_rate':0.0001}\n",
-    "training_params = {'num_epochs':100, 'batch_size':512,'apnea_weight':5}\n",
-    "preprocess_params = {'featurize_func' : utils.featurize_2,'seq_len':60,'pulse_sample_rate':16,'data_stride':30}\n",
+    "training_params = {'num_epochs':100, 'batch_size':256,'apnea_weight':10}\n",
+    "preprocess_params = {'featurize_func' : utils.featurize_2,'seq_len':60,'pulse_sample_rate':16,'data_stride':15, 'split_seed':2}\n",
     "preprocess_func = utils.preprocess_data\n",
     "model_params = {'rnn_hidden_dim':20}\n",
     "test_split = .15\n",
@@ -130,20 +114,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# %load_ext tensorboard\n",
     "# print(tf.test.is_gpu_available())\n",
@@ -152,19 +125,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "30571\n",
-      "0.06763545\n",
-      "2887\n",
-      "0.1353077\n",
-      "3120\n",
-      "0.07686432\n"
+      "76510\n",
+      "0.061002046\n",
+      "3925\n",
+      "0.020450106\n",
+      "4079\n",
+      "0.051716108\n"
      ]
     }
    ],
@@ -174,8 +147,8 @@
     "for i in dataset:\n",
     "    num_records += 1\n",
     "\n",
-    "train_data, test_data = utils.split_dataset(dataset, test_split)\n",
-    "train_data, val_data = utils.split_dataset(train_data, val_split)\n",
+    "train_data, test_data = utils.split_dataset(dataset, test_split,seed=preprocess_params['split_seed'])\n",
+    "train_data, val_data = utils.split_dataset(train_data, val_split,seed=preprocess_params['split_seed'])\n",
     "train_data = preprocess_func(train_data, \n",
     "                             featurize_func = preprocess_params['featurize_func'],\n",
     "                             seq_len=preprocess_params['seq_len'], \n",
@@ -211,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -221,8 +194,8 @@
      "output_type": "stream",
      "text": [
       "Starting Training\n",
-      "{'accuracy': 0.889909282217352, 'recall': 0.3523992229628973, 'precision': 0.2644635598141696, 'f1': 0.3021636434636265, 'auc': 0.7475163534829683}\n",
-      "{'accuracy': 0.87875, 'recall': 0.3577732990478838, 'precision': 0.27669981187852727, 'f1': 0.31205673758865254, 'auc': 0.7434877843595238}\n"
+      "{'accuracy': 0.8041391103559448, 'recall': 0.561638503620963, 'precision': 0.16845768341364614, 'f1': 0.2591776889567817, 'auc': 0.7759761172868587}\n",
+      "{'accuracy': 0.8206954318869004, 'recall': 0.43643833451844827, 'precision': 0.13067133462648436, 'f1': 0.20112504778722395, 'auc': 0.6955351145817305}\n"
      ]
     }
    ],
@@ -257,20 +230,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'accuracy': 0.8315437016510796,\n",
-       " 'recall': 0.47529652700742386,\n",
-       " 'precision': 0.39754478623938333,\n",
-       " 'f1': 0.43295763699961143,\n",
-       " 'auc': 0.8160623692632343}"
+       "{'accuracy': 0.8116942675159236,\n",
+       " 'recall': 0.2664036544850498,\n",
+       " 'precision': 0.03047795515013303,\n",
+       " 'f1': 0.054698158253751704,\n",
+       " 'auc': 0.5779425461588421}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,6 +409,8 @@
     "#visualize function\n",
     "#develop model search procedure - preprocessing, architecture, training params\n",
     "#set seeds\n",
+    "#teacher forcing /embed output, sequence to sequence model\n",
+    "#bidirectional\n",
     "\n",
     "#remove outliers\n",
     "#0-1 scaling \n",
@@ -448,6 +423,13 @@
     "#add metrics to tensorboard\n",
     "#add keyboard interupt to training loop\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
