updated Data Pipeline notebook

--- a/Data Pipeline.ipynb
+++ b/Data Pipeline.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,53 +28,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_dir = 'data/test_dir'\n",
     "edf_dir = 'raw_data/edfs'\n",
     "annotation_dir = 'raw_data/annotation-events-nsrr'\n",
+    "s3_bucket = 'apnea-study'\n",
     "tf_record_dir = 'preprocessed_data/'\n",
-    "edf_loader = EDFLoader(os.path.join(data_dir, edf_dir))\n",
-    "annotation_loader = AnnotationLoader(os.path.join(data_dir, annotation_dir))\n",
-    "preprocessor = PreprocessRecords(os.path.join(data_dir, tf_record_dir))"
+    "edf_loader = EDFLoader(os.path.join(data_dir, edf_dir),s3_bucket)\n",
+    "annotation_loader = AnnotationLoader(os.path.join(data_dir, annotation_dir),s3_bucket)\n",
+    "preprocessor = PreprocessRecords(os.path.join(data_dir, tf_record_dir), s3_bucket)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = edf_loader.load()"
+    "# X = edf_loader.load_from_local()\n",
+    "X = edf_loader.load_from_s3()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = annotation_loader.load()"
+    "# y = annotation_loader.load_from_local()\n",
+    "y = annotation_loader.load_from_s3()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "preprocessor.write_to_tf_records(X,y)"
+    "preprocessor.write_to_tf_records_to_local(X,y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = preprocessor.read_from_tf_records()"
+    "dataset = preprocessor.read_from_tf_records_from_local()"
    ]
   },
   {
@@ -83,15 +86,13 @@
    "source": [
     "TO DO: figure out how to run this at scale on s3 or NW machine\n",
     "\n",
-    "T"
+    "TO DO: preprocessing within tf dataset - save back to s3\n",
+    "\n",
+    "TO DO: preprocessing class interface with s3 bucket\n",
+    "\n",
+    "https://docs.w3cub.com/tensorflow~guide/deploy/s3/\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
