--- a/notebooks/Data Pipeline.ipynb
+++ b/notebooks/Data Pipeline.ipynb
@@ -22,7 +22,7 @@
     "import matplotlib.pyplot as plt\n",
     "import xml.etree.ElementTree as ET\n",
     "import tensorflow as tf\n",
-    "from src.preprocessing import EDFLoader, AnnotationLoader, PreprocessRecords\n",
+    "from src.etl import EDFLoader, AnnotationLoader, RecordETL\n",
     "%autoreload"
    ]
   },
@@ -39,7 +39,7 @@
     "tf_record_dir = 'preprocessed_data/'\n",
     "edf_loader = EDFLoader(os.path.join(data_dir, edf_dir),s3_bucket)\n",
     "annotation_loader = AnnotationLoader(os.path.join(data_dir, annotation_dir),s3_bucket)\n",
-    "preprocessor = PreprocessRecords(os.path.join(data_dir, tf_record_dir), s3_bucket)"
+    "etl = RecordETL(os.path.join(data_dir, tf_record_dir), s3_bucket)"
    ]
   },
   {
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "preprocessor.write_to_tf_records_to_local(X,y)"
+    "etl.write_to_tf_records_to_local(X,y)"
    ]
   },
   {
@@ -77,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = preprocessor.read_from_tf_records_from_local()"
+    "dataset = etl.read_from_tf_records_from_local()"
    ]
   },
   {
