--- a/notebooks/Development.ipynb
+++ b/notebooks/Development.ipynb
@@ -26,18 +26,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from lib.utils import get_record_names"
+    "#extract raw data\n",
+    "record_names = filter(lambda x : x != '', [re.sub(r\"\\..*$\",'',file) for file in os.listdir('data/raw_data/edfs/')])\n",
+    "record_names = list(record_names)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#extract raw data\n",
-    "record_names = filter(lambda x : x != '', [re.sub(r\"\\..*$\",'',file) for file in os.listdir('data/raw_data/edfs/')])\n",
-    "record_names = list(record_names)"
+    "record = record_names[0]\n",
+    "f = pyedflib.EdfReader('data/raw_data/edfs/'+record+'.edf')\n",
+    "n = int(f.readSignal(18).shape[0] / 16)\n",
+    "ecg = f.readSignal(18)\n",
+    "annotation = np.zeros(n)\n",
+    "tree = ET.parse('data/raw_data/annotations-events-nsrr/'+record+'-nsrr.xml')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'homepap-lab-full-1600135'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "record"
    ]
   },
   {
